fixed moving nav links, links to new tabs, and spacing of buttons

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
    font-weight: normal;
    line-height: 25px;
    font-size: 16px;
+   border-bottom: 1px transparent solid;
 }
 
 .header-link:hover {
@@ -175,9 +176,10 @@
    font-family: 'Space Mono', monospace;
    text-transform: uppercase;
    font-size: 12px;
-   margin-right: 5px;
+   margin-right: 10px;
    border-radius: 5px;
    border: 1px #999999 solid;
+   margin-top: 10px;
 }
 
 .filter-button:hover {
